quick fix overflowed accept button on friendrequestlistview

--- a/src/game/app/client/views/css/style.css
+++ b/src/game/app/client/views/css/style.css
@@ -401,6 +401,7 @@ button:disabled {
 .btn-blue:hover {
   opacity: 1;
   background-color: #017281;
+  color: var(--white-color);
 }
 
 .btn-white {
@@ -410,7 +411,7 @@ button:disabled {
 
 .btn-white:hover {
   opacity: 1;
-  background-color: rgb(212, 202, 188);
+  background-color: rgb(196, 186, 173);
   color: var(--light-black-color);
 }
 
